@@ -1604,10 +1604,22 @@ function uc_addresses_theme() {
       'variables' => array(
         'address' => new stdClass(),
         'options' => array(
+          'view_link' => FALSE,
           'edit_link' => FALSE,
           'delete_link' => FALSE,
+          'default_flags' => FALSE,
           'destination' => '',
+          'context' => 'address_view',
         ),
+        'label' => NULL,
+        'aid' => NULL,
+        'uid' => NULL,
+        'admin_links' => '',
+        'view_address_link' => '',
+        'edit_address_link' => '',
+        'delete_address_link' => '',
+        'classes' => NULL,
+        'classes_array' => array(),
       ),
       'template' => 'templates/uc-addresses-list-address',
       'file' => 'uc_addresses.pages.inc',
